{
    "version": 1,
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "ae33abe6-8c1c-4e7a-9bc7-44309e41230d",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "142d4ac6-2b70-4a21-b439-38ece234df01",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "66fecf14-d4e4-4d26-bd44-f8213bbe1218",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChainShot",
                    "type": "Button",
                    "id": "f7ab44ee-b60d-478b-99e2-f97abcd89291",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Repulse",
                    "type": "Button",
                    "id": "d5d57e94-f872-4f0c-a7d9-d327596a88af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7dd863c-4437-4baa-a6b0-2521eae86164",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "ChainShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b081dce-f5ee-406f-b583-87e4ec5a5f9e",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Repulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebe08e4f-ede8-4e9f-b6e0-5afd5525b6a5",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "249005e1-c053-40e9-8f8c-63d53fa198a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8370dc61-d8d5-4f80-ab4b-745a14ed5b62",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "3fcb4a31-fc2d-4ed8-b249-bca916da4852",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "23fdeac0-088d-4244-befb-ba0878f89f95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "602b3db9-b0c6-4f13-8973-b93a8c74005f",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}